kubernetes/catalog/gotify/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/A75G/docker-templates/master/templates/gotify.xml
# Category: Productivity, Tools-Utilities, Network-Messenger
# Stars: 105 | Downloads: 42664227
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
  labels:
    app.kubernetes.io/name: gotify
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: gotify
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gotify
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: gotify
          image: gotify/server:latest
          ports:
            - containerPort: 80
              protocol: TCP
              name: host-port-1
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: gotify-data-0
              mountPath: "/app/data"
            - name: gotify-data-1
              mountPath: "/etc/gotify"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: gotify-data-0
        persistentVolumeClaim:
          claimName: gotify-data-0
      - name: gotify-data-1
        persistentVolumeClaim:
          claimName: gotify-data-1
---
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
  labels:
    app.kubernetes.io/name: gotify
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: gotify
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: host-port-1
  type: ClusterIP
