kubernetes/catalog/gotify/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: gotify
  labels:
    app.kubernetes.io/name: gotify
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gotify.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: gotify
          port: 80
  tls:
    secretName: int-rlservers-com-tls
